--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/imageView"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -98,22 +99,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="@string/dummy_meta_count_1"-->
-    <!--android:id="@+id/friends_count_meta"-->
-    <!--android:layout_marginLeft="36dp"-->
-    <!--android:layout_alignParentTop="true" />-->
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="New Text"-->
-    <!--android:id="@+id/textView2"-->
-    <!--android:layout_alignLeft="@+id/friends_count_meta"-->
-    <!--android:layout_alignStart="@+id/friends_count_meta" />-->
-    <Button
+    <com.cengalabs.flatui.views.FlatButton
         android:id="@+id/edit_profile_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
