--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,4 +1,4 @@
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:flatui="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,11 +7,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_vertical_margin"
-        android:paddingRight="@dimen/activity_vertical_margin">
+        android:paddingRight="@dimen/activity_vertical_margin"
+        android:id="@+id/search_box">
         <com.cengalabs.flatui.views.FlatEditText
             android:layout_width="match_parent"
             android:layout_height="46dp"
@@ -20,6 +21,7 @@
             flatui:textColor="darker"
             android:hint="@string/search_hint"
             android:layout_weight="1"/>
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,8 +32,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@android:id/list">
+        android:id="@android:id/list"
+        android:layout_below="@+id/search_box"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
-    </ListView>
-
-</FrameLayout>
+</RelativeLayout>
