--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.pixel.singletune.app.LoginActivity">
+    tools:context="com.pixel.singletune.app.ui.LoginActivity">
 
 
     <com.cengalabs.flatui.views.FlatEditText
