--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.pixel.singletune.app.NotificationsActivity">
+    tools:context="com.pixel.singletune.app.ui.NotificationsActivity">
 
     <TextView
         android:text="@string/hello_world"
