--- a/app/src/main/res/menu/profile.xml
+++ b/app/src/main/res/menu/profile.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.pixel.singletune.app.ProfileActivity">
+    tools:context="com.pixel.singletune.app.ui.ProfileActivity">
 
     <item
         android:id="@+id/action_logout"
