--- a/app/src/main/res/menu/signup.xml
+++ b/app/src/main/res/menu/signup.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.pixel.singletune.app.SignupActivity" >
+    tools:context="com.pixel.singletune.app.ui.SignupActivity" >
     
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
