--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:flatui="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/light_blue">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,12 +12,11 @@
         android:paddingLeft="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_vertical_margin"
         android:id="@+id/search_box">
-        <com.cengalabs.flatui.views.FlatEditText
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="46dp"
             android:id="@+id/search_editText"
-            flatui:theme="Sand"
-            flatui:textColor="darker"
+            android:singleLine="true"
             android:hint="@string/search_hint"
             android:layout_weight="1"/>
 
@@ -29,12 +27,15 @@
             android:src="@drawable/ic_action_search"/>
     </LinearLayout>
 
-    <ListView
+    <GridView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@android:id/list"
+        android:id="@+id/friendsGrid"
         android:layout_below="@+id/search_box"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:paddingBottom="@dimen/list_vertical_margin"
+        android:clipToPadding="false"
+        android:numColumns="3"/>
 
 </RelativeLayout>
