--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,47 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:flatui="http://schemas.android.com/apk/res-auto">
-
-    <ImageView
-        android:layout_width="wrap_content"
+    android:background="@android:color/transparent">
+`
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/user_imageView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:src="@drawable/ic_action_picture"
-        android:minWidth="80dp"
-        android:minHeight="80dp"
-        android:maxHeight="80dp"
-        android:maxWidth="80dp"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:contentDescription="@string/userAvaterPlaceholder" />
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="@dimen/list_horizontal_margin"
+        android:layout_marginLeft="@dimen/list_vertical_margin"
+        android:layout_marginRight="@dimen/list_vertical_margin"
+        android:background="@android:color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/username_label"
-        android:id="@+id/username_textView"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/user_imageView"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/avatar"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:minHeight="64dp"
+            android:minWidth="64dp"
+            android:src="@drawable/ic_action_picture"
+            android:contentDescription="@string/userAvaterPlaceholder" />
 
-    <com.cengalabs.flatui.views.FlatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/follow_button_text"
-        android:id="@+id/item_follow_button"
-        android:layout_marginRight="38dp"
-        android:layout_alignBottom="@+id/user_imageView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="15dp"
-        flatui:theme="Sky"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/username_label"
+            android:id="@+id/usernameLabel"
+            android:paddingTop="@dimen/user_list_top_text_horizontal_padding"
+            android:layout_toRightOf="@+id/avatar"/>
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</LinearLayout>
+
