--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="light_orange">#ffefd3</color>
+    <color name="light_blue">#F6F7FF</color>
 </resources>
