--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="list_vertical_margin">8dp</dimen>
+    <dimen name="list_horizontal_margin">8dp</dimen>
+    <dimen name="user_list_top_text_horizontal_padding">8dp</dimen>
 
-    </resources>
+</resources>
