--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="list_vertical_margin">8dp</dimen>
     <dimen name="list_horizontal_margin">8dp</dimen>
     <dimen name="user_list_top_text_horizontal_padding">8dp</dimen>
+    <dimen name="user_grid_top_text_horizontal_padding">4dp</dimen>
+    <dimen name="user_grid_spacing">8dp</dimen>
 
 </resources>
