--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_st</item>
         <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.St</item>
         <item name="android:listViewStyle">@style/Theme.St.light_orange_background</item>
-        <item name="android:gridViewStyle">@style/Theme.St.light_orange_background</item>
+        <item name="android:gridViewStyle">@style/Theme.St.light_orange_background.GridView</item>
 
 
         <!-- Light.DarkActionBar specific -->
@@ -65,6 +65,18 @@
 
     <style name="Theme.St.light_orange_background">
         <item name="android:background">@color/light_blue</item>
+    </style>
+    <style name="Theme.St.light_orange_background.GridView">
+        <item name="android:padding">@dimen/user_grid_spacing</item>
+    </style>
+
+    <style name="GridImage">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:scaleType">fitXY</item>
+        <item name="android:adjustViewBounds">true</item>
     </style>
 
 </resources>
