--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     tools:context="com.pixel.singletune.app.ui.ProfileActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profileAvatarImageView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_alignParentLeft="true"
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/imageView"
+        android:layout_below="@id/profileAvatarImageView"
         android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
