--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -36,6 +36,8 @@
         android:layout_alignParentStart="true"
         android:paddingBottom="@dimen/list_vertical_margin"
         android:clipToPadding="false"
-        android:numColumns="3"/>
+        android:numColumns="3"
+        android:horizontalSpacing="@dimen/user_grid_spacing"
+        android:verticalSpacing="@dimen/user_grid_spacing"/>
 
 </RelativeLayout>
