--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@android:color/transparent">
 `
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:layout_marginTop="@dimen/list_horizontal_margin"
-        android:layout_marginLeft="@dimen/list_vertical_margin"
-        android:layout_marginRight="@dimen/list_vertical_margin"
         android:background="@android:color/white">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/avatar"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:minHeight="64dp"
-            android:minWidth="64dp"
-            android:src="@drawable/ic_action_picture"
-            android:contentDescription="@string/userAvaterPlaceholder" />
+            android:id="@+id/avatarImageView"
+            android:contentDescription="@string/userAvaterPlaceholder"
+            android:src="@drawable/default_avatar"
+            style="@style/GridImage"/>
+        <ImageView
+            android:id="@+id/selectedAvatarImageView"
+            android:contentDescription="@string/userAvaterPlaceholder"
+            android:src="@drawable/avatar_selected"
+            style="@style/GridImage"
+            android:visibility="invisible"/>
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_height="44dp"
             android:text="@string/username_label"
             android:id="@+id/usernameLabel"
-            android:paddingTop="@dimen/user_list_top_text_horizontal_padding"
-            android:layout_toRightOf="@+id/avatar"/>
+            android:maxLines="2"
+            android:padding="@dimen/user_grid_top_text_horizontal_padding"
+            android:layout_below="@+id/avatarImageView"/>
 
     </RelativeLayout>
 
